--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,30 @@ __pycache__/
 # 忽略系统文件
 .DS_Store
 Thumbs.db
+# OS / IDE
+.DS_Store
+.idea/
+__pycache__/
+*.pyc
+.ipynb_checkpoints/
+
+# Data (原始/中间/模型/日志 不上库)
+data/raw/
+data/interim/
+results/
+*.npy
+*.npz
+*.pt
+*.pth
+*.onnx
+*.ckpt
+*.wav
+*.mp3
+*.flac
+*.m4a
+*.zip
+*.tar
+*.tar.gz
+
+# Jupyter & temp
+*.log
