--- a/environment.yml
+++ b/environment.yml
@@ -3,16 +3,15 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9
-  - numpy
-  - scipy
-  - pandas
-  - scikit-learn
-  - matplotlib
-  - jupyter
-  - librosa=0.10.0
+  - python=3.13
+  - numpy=2.2.*
+  - scipy=1.16.*
+  - scikit-learn=1.7.*
+  - matplotlib=3.10.*
   - soundfile
-  - pip
+  - jupyter
   - ipykernel
+  - pip
   - pip:
-      - gradio
+      - librosa==0.11.*
+      - soxr
