--- a/environment.yml
+++ b/environment.yml
@@ -3,15 +3,17 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.13
-  - numpy=2.2.*
-  - scipy=1.16.*
-  - scikit-learn=1.7.*
-  - matplotlib=3.10.*
-  - soundfile
+  - python=3.10.*            # 建议固定主次版本，示例
+  - numpy
+  - scipy
+  - pandas
+  - scikit-learn
+  - matplotlib
   - jupyter
+  - librosa=0.11.*           # 你现在用的是 0.11.0
+  - pysoundfile              # ← 这里用 pysoundfile（conda 包名）
   - ipykernel
   - pip
   - pip:
-      - librosa==0.11.*
-      - soxr
+      - gradio               # 仍然走 pip
+
